--- a/bomb_test.html
+++ b/bomb_test.html
@@ -27,6 +27,7 @@
         <script>
             var canvas = document.getElementById("myCanvas");
             var ctx = canvas.getContext("2d");
+            var count = 0;
             var key = { //กำหนดตค่าปุ่มเริ่มต้น
                 move:undefined
             }
@@ -34,13 +35,13 @@
             var key_p = undefined;
             var snake = [{x:canvas.width/2-10, y:canvas.height/2-10}]; //สร้างarray snake เก็บค่าพิกัดงู ซึ่งตัวแรกให้อยู่กลางแมพ
             var food = { //สุ่มเกิดอาหาร
-                x:Math.floor(Math.random()*24+1)*size,
+                x:Math.floor(Math.random()*24+1)*size, 
                 y:Math.floor(Math.random()*24+1)*size
             }
-            var bomb = {
-                x:Math.floor(Math.random()*24+1)*size,
-                y:Math.floor(Math.random()*24+1)*size
-            }
+            function spawn_b(){
+                this.bombx = Math.floor(Math.random()*24+1)*size;
+                this.bomby = Math.floor(Math.random()*24+1)*size;
+                }
 
             for (let i = 1; i <= 3; i++){ //สร้างพิกัดจุดงูเริ่มต้นซึ่งมี4จุด เพราะมี4บล็อค
                 snake.push({
@@ -52,30 +53,29 @@
                 key.move= String.fromCharCode(event.keyCode); //ให้ค่าที่รับกลายเป็นstr
                 console.log(key.move);
             })
-            function draw(){ //สร้างงู
+            function draw(){ //ฟังชั่นในการสร้างภาพทั้งหมด
+       
                 if (key.move == "W" && key_p != "S") key_p = "W"; //เช็คปุ่มและป้องกันการเดินถอยหลัง
                 else if (key.move == "S" && key_p != "W" && key_p != undefined) key_p = "S"; //เช็คปุ่มและป้องกันการเดินถอยหลัง
                 else if (key.move == "A" && key_p != "D") key_p = "A"; //เช็คปุ่มและป้องกันการเดินถอยหลัง
                 else if (key.move == "D" && key_p != "A") key_p = "D"; //เช็คปุ่มและป้องกันการเดินถอยหลัง
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
+                
                 for (let i = 0; i < snake.length; i++ ){ //สร้างงูที่อยู่ในarray
-                    ctx.shadowColor = "#F20505";
-                    ctx.shadowBlur = 10;
-                    ctx.fillStyle = "#BF0404";
+                    ctx.shadowColor = "#F20505"; //สีshadow
+                    ctx.shadowBlur = 10; //ขนาดshadow
+                    ctx.fillStyle = "#BF0404"; //สี
                     ctx.fillRect(snake[i].x, snake[i].y, size, size);
                     ctx.strokeStyle = "#ef648f";
                     ctx.strokeRect(snake[i].x, snake[i].y, size, size);
-
-
                 }
-            function drawFood(){
-                ctx.shadowColor = "red";
-                ctx.shadowBlur = 10;
-                ctx.fillStyle = "white"; //สร้างอาหาร
-
-                ctx.fillRect(food.x, food.y, size, size);
-                ctx.strokeRect(food.x, food.y, size, size);
-            }
+                function drawFood(){
+                    ctx.shadowColor = "red";
+                    ctx.shadowBlur = 10;
+                    ctx.fillStyle = "white"; //สร้างอาหาร
+                    ctx.fillRect(food.x, food.y, size, size);
+                    ctx.strokeRect(food.x, food.y, size, size);
+                }
                 let newx = snake[0].x; // ให้พิกัดใหม่มีค่าเท่ากับหัวงู
                 let newy = snake[0].y;
 
@@ -92,8 +92,8 @@
                         ctx.fillStyle = "green";
                         ctx.fillRect(snake[i].x, snake[i].y, size, size);
                         ctx.strokeRect(snake[i].x, snake[i].y, size, size);
-                        clearInterval(game);
-                        clearInterval(bombb);
+                        clearInterval(game); //หยุดการทำงาน
+                        clearInterval(bombtimeset); //หยุดการททำงาน
                         }
                     }
 
@@ -110,29 +110,24 @@
                 }
                 if (newx != snake[0].x || newy != snake[0].y){
                 snake.unshift({ //เพิ่มส่วนหัว (ถ้างูกินอาหารส่วนหางจะไม่ถูกตัดทำให้งูยาวขึ้น)
-                    x:newx,
+                    x:newx, 
                     y:newy
-                });}
-            function drawBomb(){
-                ctx.shadowColor = "purple";
-                ctx.shadowBlur = 10;
-                ctx.fillStyle = "purple";
-                ctx.fillRect(bomb.x, bomb.y, size, size);
-                ctx.strokeRect(bomb.x, bomb.y, size, size);
+                })
+                }
+                function drawBomb(){ //ฟังชั้นวาดระเบิด
+                    ctx.shadowColor = "purple"; //สีshawdow
+                    ctx.shadowBlur = 10; //ขนาดshadow
+                    ctx.fillStyle = "purple"; //สี
+                    ctx.fillRect(this.bombx, this.bomby, size, size); //สร้างรูป
+                    ctx.strokeRect(this.bombx, this.bomby, size, size); //สร้างขอบ
+                }
+            count = (count*10 + 0.1*10) /10; // นับที่ละ 1 เพราะฟังชั่นdrawทำงานครั้งละ 1 วิ(ที่ต้องคูณ100เพราะ js บวก float มันกาก)
+            if (count%5 == 0) spawn_b(); // ไปที่ฟังชั้นspawn_b เพื่อรีเวลาใหม่
+            drawFood();//เรียกฟังชั้นวาดอาหาร
+            drawBomb();//เรียกฟังชั้นวาดระเบิด
             }
-            drawFood();
-            drawBomb();
-            }
-
-            let game = setInterval(draw,75);
-
-            let bombb= setInterval(
-			    function(){
-                bomb.x = Math.floor(Math.random()*24+1)*size;
-                bomb.y = Math.floor(Math.random()*24+1)*size;
-				}
-				,5000);
-            let boom= setInterval(
+            let game = setInterval(draw,100);
+            /*let boom = setInterval(
 			    function(){
                 ctx.shadowColor = "yellow";
                 ctx.shadowBlur = 10;
@@ -141,7 +136,7 @@
                 ctx.fillRect(bomb.x, bomb.y, size, canvas.height);
                 ctx.strokeRect(bomb.x, bomb.y, canvas.width, size);
                 ctx.strokeRect(bomb.x, bomb.y, size, canvas.height);
-				},3000);
+				},3000);*/
         </script>
     </body>
 </html>
