--- a/snake main code.html
+++ b/snake main code.html
@@ -38,7 +38,7 @@
             var size = 20; //ขนาดบล็อคตัวงู
             var key_p = undefined;
             var snake = [{x:canvas.width/2-10, y:canvas.height/2-10}]; //สร้างarray snake เก็บค่าพิกัดงู ซึ่งตัวแรกให้อยู่กลางแมพ
-            var foodspace = [] //array เก็บ พื้นที่เกิดอาหาร
+            
             function spawn_b(){
                 this.bombx = Math.floor(Math.random()*24+1)*size;
                 this.bomby = Math.floor(Math.random()*24+1)*size;
@@ -55,6 +55,7 @@
                 })
             }
             function makefood(){  //สร้างพื้นที่ที่มีโอกาศเกิดอาหาร
+                this.foodspace = [] //array เก็บ พื้นที่เกิดอาหาร
                 for (var i = 0; i <= canvas.width-20; i += 20){ // แกน x
                     for(var j = 0; j <= canvas.height-20; j += 20){ // แกน y
                         for(let y = 0; y < snake.length; y++){
@@ -66,7 +67,7 @@
             }
             }
             makefood();
-            var food = foodspace[Math.floor(Math.random() * foodspace.length)]; // array อาหารที่เกิด
+            var food = this.foodspace[Math.floor(Math.random() * foodspace.length)]; // array อาหารที่เกิด
             window.addEventListener('keydown', function(event){ // รับค่าkeyborad
                 key.move= String.fromCharCode(event.keyCode); //ให้ค่าที่รับกลายเป็นstr
             })
@@ -122,7 +123,7 @@
 
                 if(newx == food.x && newy == food.y){ //ถ้างูกินอาหารแล้วอาหารจะถูกสุ่มเกิดใหม่
                     makefood();
-                    food = foodspace[Math.floor(Math.random() * foodspace.length)];
+                    food = this.foodspace[Math.floor(Math.random() * foodspace.length)];
                     }
                 else{
                     if ((newx != snake[0].x || newy != snake[0].y) && snake.length != 1){
