Edit js2 (unfinished)

--- a/main file/index.html
+++ b/main file/index.html
@@ -11,7 +11,7 @@
         <canvas id="myCanvas" height="500";
         width="500";>
         </canvas>
-        <button onclick="start()">Play again!</button>
         <script src="js2.js"></script>
+        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="start()">Start!</button>
     </body>
 </html>
