--- a/main file/test.html
+++ b/main file/test.html
@@ -53,6 +53,6 @@
             </div>
         </div>
         </center>
-    <script src="test.js"></script>
+    <script src="tarza.js"></script>
     </body>
 </html>
