--- a/main file/index.html
+++ b/main file/index.html
@@ -53,6 +53,6 @@
             </div>
         </div>
         </center>
-    <script src="test_shield.js"></script>
+    <script src="tarza.js"></script>
     </body>
 </html>
