--- a/main file/index.html
+++ b/main file/index.html
@@ -38,6 +38,7 @@
             <canvas id="myCanvas" height="500";
             width="500";>
             </canvas>
+            <img id="myBomb" src="src/pic/bomb.gif">
         </div>
 
         <!-- End Screen -->
