--- a/main file/index.html
+++ b/main file/index.html
@@ -25,6 +25,12 @@
         <audio id="bgm" autoplay loop>
             <source src="src/sound/bgm.mp3" type="audio/ogg">
         </audio>
+        <audio id="blue" preload="auto">
+            <source src="src/sound/blue.mp3" type="audio/ogg">
+        </audio>
+        <audio id="cdtime">
+            <source src="src/sound/Warning2.mp3" type="audio/ogg">
+        </audio>
     </head>
     <body>
         <!-- Start Screen -->
@@ -35,8 +41,8 @@
         <div id="playGame">
             <h2>score: <span id="theScore">0</span></h2>
             <h2>Time Left: <span id="theTime">20</span> </h2>
-            <canvas id="myCanvas" height="500";
-            width="500";>
+            <canvas id="myCanvas" height="700";
+            width="700";>
             </canvas>
             <img id="myBomb" src="src/pic/bomb.gif">
         </div>
