--- a/main file/index.html
+++ b/main file/index.html
@@ -22,15 +22,22 @@
         <audio id="gameover">
             <source src="src/sound/game_over.mp3" type="audio/ogg">
         </audio>
+        <audio id="cdtime">
+            <source src="src/sound/Warning2.mp3" type="audio/ogg">
+        </audio>
+        <audio id="blink">
+            <source src="src/sound/time.mp3" type="audio/ogg">
+        </audio>
+        <audio id="pop">
+            <source src="src/sound/pop.mp3" type="audio/ogg">
+        </audio>
         <audio id="bgm" autoplay loop>
             <source src="src/sound/bgm.mp3" type="audio/ogg">
         </audio>
         <audio id="blue" preload="auto">
             <source src="src/sound/blue.mp3" type="audio/ogg">
         </audio>
-        <audio id="cdtime">
-            <source src="src/sound/Warning2.mp3" type="audio/ogg">
-        </audio>
+
     </head>
     <body>
         <!-- Start Screen -->
