--- a/decor test/index.html
+++ b/decor test/index.html
@@ -42,7 +42,7 @@
     <body>
         <!-- Start Screen -->
         <div id="startGame">
-            <h1 id="pressStart"><img id="keyW" src="src/pic/teststart.png"></h1>
+            <h1 id="pressStart"><img id="keyW" src="src/pic/test.png"></h1>
         </div>
         <!-- Game Screen -->
         <div id="playGame">
