--- a/Snake 3018/index.html
+++ b/Snake 3018/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>The Snake</title>
+        <title>Snake 3019</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
@@ -67,6 +67,6 @@
             </div>
         </div>
         </center>
-    <script src="tarza.js"></script>
+    <script src="snakegame.js"></script>
     </body>
 </html>
