Add number bomb

--- a/Snake 3018/index.html
+++ b/Snake 3018/index.html
@@ -31,7 +31,7 @@
         <audio id="pop">
             <source src="src/sound/pop.mp3" type="audio/ogg">
         </audio>
-        <audio id="bgm" autoplay loop>
+        <audio id="bgm" preload="auto">
             <source src="src/sound/bgm.mp3" type="audio/ogg">
         </audio>
         <audio id="blue" preload="auto">
