--- a/Snake 3018/index.html
+++ b/Snake 3018/index.html
@@ -8,6 +8,7 @@
         <!-- This is for font -->
         <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
         <!-- This is for Audio -->
         <audio id="bite" preload="auto">
@@ -31,10 +32,10 @@
         <audio id="pop">
             <source src="src/sound/pop.mp3" type="audio/ogg">
         </audio>
-        <audio id="bgm" preload="auto">
+        <audio volume="0.1" id="bgm" preload="auto">
             <source src="src/sound/bgm.mp3" type="audio/ogg">
         </audio>
-        <audio id="blue" preload="auto">
+        <audio volume="0.1" id="blue" preload="auto">
             <source src="src/sound/blue.mp3" type="audio/ogg">
         </audio>
 
