--- a/Snake 3018/game3.html
+++ b/Snake 3018/game3.html
@@ -58,11 +58,11 @@
         }
 
         .button:hover {
-            border: 7px solid rgb(112, 208, 224);
-            box-shadow: 0px 0px 30px rgb(167, 242, 255);
+            border: 7px solid rgb(244, 246, 247);
+            box-shadow: 0px 0px 30px rgb(251, 252, 252);
             padding: 25px;
             font-family: 'Orbitron', sans-serif;
-            color: rgb(112, 208, 224);
+            color: rgb(255, 255, 255);
             cursor: url(http://ani.cursors-4u.net/cursors/cur-12/cur1136.ani), url(http://ani.cursors-4u.net/cursors/images12/cur1136.png), auto;
             touch-action: none;
         }
@@ -86,12 +86,9 @@
 </head>
 
 <body>
-    <div class="logo">SNAKE 3018</div>
-
-    <a href="#" class="button"> START </a>
+    <div class="logo">SNAKE 3019</div>
+    <a href="index.html" class="button"> START </a>
     <a href="how2.html" class="button two"> HOW TO PLAY </a>
-
-
 </body>
 
 </html>
