--- a/Snake 3018/how2.html
+++ b/Snake 3018/how2.html
@@ -148,7 +148,7 @@
         <p class="rule clock">🐍 EAT THE CLOCK TO UP TIME</p>
 
     </div>
-    <a href="#" class="button"> START </a>
+    <a href="index.html" class="button"> START </a>
 
 
 </body>
