--- a/Snake 3018/index.html
+++ b/Snake 3018/index.html
@@ -33,7 +33,7 @@
             <source src="src/sound/pop.mp3" type="audio/ogg">
         </audio>
         <audio volume="0.1" id="bgm" preload="auto">
-            <source src="src/sound/bgm.mp3" type="audio/ogg">
+            <source src="src/sound/bgm2.mp3" type="audio/ogg">
         </audio>
         <audio volume="0.1" id="blue" preload="auto">
             <source src="src/sound/blue.mp3" type="audio/ogg">
