--- a/Snake 3018/index.html
+++ b/Snake 3018/index.html
@@ -36,7 +36,7 @@
             <source src="src/sound/bgm2.mp3" type="audio/ogg">
         </audio>
         <audio volume="0.1" id="blue" preload="auto">
-            <source src="src/sound/blue.mp3" type="audio/ogg">
+            <source src="src/sound/blue2.mp3" type="audio/ogg">
         </audio>
 
     </head>
