--- a/Snake 3018/index.html
+++ b/Snake 3018/index.html
@@ -43,7 +43,7 @@
     <body>
         <!-- Start Screen -->
         <div id="startGame">
-            <h1 id="pressStart"><img id="keyW" src="src/pic/test.png"></h1>
+            <h1 id="pressStart"><img id="keyW" src="src/pic/str.png"></h1>
         </div>
         <!-- Game Screen -->
         <div id="playGame">
