--- a/Snake 3018/index.html
+++ b/Snake 3018/index.html
@@ -32,7 +32,7 @@
         <audio id="pop">
             <source src="src/sound/pop.mp3" type="audio/ogg">
         </audio>
-        <audio volume="0.1" id="bgm" preload="auto">
+        <audio volume="0.1" id="bgm" autoplay loop>
             <source src="src/sound/bgm3.mp3" type="audio/ogg">
         </audio>
         <audio volume="0.1" id="blue" preload="auto">
