--- a/Snake 3018/index.html
+++ b/Snake 3018/index.html
@@ -4,6 +4,7 @@
         <title>Snake 3019</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <link rel="stylesheet" type="text/css" href="style.css">
         <!-- This is for font -->
         <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
