--- a/Snake 3018/index.html
+++ b/Snake 3018/index.html
@@ -33,7 +33,7 @@
         <audio id="pop">
             <source src="src/sound/pop.mp3" type="audio/ogg">
         </audio>
-
+        <!-- <iframe src="src/sound/bgm3.mp3" allow="autoplay" id="stopbgm" style="display:none"></iframe> -->
         <audio volume="0.1" id="bgm" autoplay loop>
             <source src="src/sound/bgm3.mp3" type="audio/ogg">
         </audio>
