--- a/Snake 3018/how2.html
+++ b/Snake 3018/how2.html
@@ -3,6 +3,8 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
+    <link rel="icon" href="src/pic/icon.png">
+
     <style>
         html {
             background-image: url("https://media.giphy.com/media/4ZMAeVfSM59za/giphy.gif");
