--- a/Snake 3018/start.html
+++ b/Snake 3018/start.html
@@ -5,6 +5,8 @@
     <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+    <link rel="icon" href="src/pic/icon.png">
+
     <style>
         html {
             background-image: url("https://media.giphy.com/media/4ZMAeVfSM59za/giphy.gif");
