--- a/Snake 3019/file/index.html
+++ b/Snake 3019/file/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
-        <link rel="stylesheet" type="text/css" href="file/style.css">
+        <link rel="stylesheet" type="text/css" href="../file/style.css">
         <!-- This is for font -->
         <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
@@ -13,38 +13,38 @@
 
         <!-- This is for Audio -->
         <audio id="bite" preload="auto">
-            <source src="src/sound/bite.mp3" type="audio/ogg">
+            <source src="../src/sound/bite.mp3" type="audio/ogg">
         </audio>
         <audio id="clock" preload="auto">
-            <source src="src/sound/clock.mp3" type="audio/ogg">
+            <source src="../src/sound/clock.mp3" type="audio/ogg">
         </audio>
         <audio id="fire" preload="auto">
-            <source src="src/sound/fire.mp3" type="audio/ogg">
+            <source src="../src/sound/fire.mp3" type="audio/ogg">
         </audio>
         <audio id="gameover">
-            <source src="src/sound/game_over.mp3" type="audio/ogg">
+            <source src="../src/sound/game_over.mp3" type="audio/ogg">
         </audio>
         <audio id="cdtime">
-            <source src="src/sound/Warning2.mp3" type="audio/ogg">
+            <source src="../src/sound/Warning2.mp3" type="audio/ogg">
         </audio>
         <audio id="blink">
-            <source src="src/sound/time.mp3" type="audio/ogg">
+            <source src="../src/sound/time.mp3" type="audio/ogg">
         </audio>
         <audio id="pop">
-            <source src="src/sound/pop.mp3" type="audio/ogg">
+            <source src="../src/sound/pop.mp3" type="audio/ogg">
         </audio>
         <!-- <iframe src="src/sound/bgm3.mp3" allow="autoplay" id="stopbgm" style="display:none"></iframe> -->
         <audio volume="0.1" id="bgm" autoplay loop>
-            <source src="src/sound/bgm3.mp3" type="audio/ogg">
+            <source src="../src/sound/bgm3.mp3" type="audio/ogg">
         </audio>
         <audio volume="0.1" id="blue" preload="auto">
-            <source src="src/sound/bgm2.5.mp3" type="audio/ogg">
+            <source src="../src/sound/bgm2.5.mp3" type="audio/ogg">
         </audio>
     </head>
     <body>
         <!-- Start Screen -->
         <div id="startGame">
-            <h1 id="pressStart"><img id="keyW" src="src/pic/str.png"></h1>
+            <h1 id="pressStart"><img id="keyW" src="../src/pic/str.png"></h1>
         </div>
         <!-- Game Screen -->
         <div id="playGame">
@@ -53,7 +53,7 @@
             <canvas id="myCanvas" height="625";
             width="625";>
             </canvas>
-            <img id="myBomb" src="src/pic/bomb.gif">
+            <img id="myBomb" src="../src/pic/bomb.gif">
         </div>
 
         <!-- End Screen -->
@@ -61,7 +61,7 @@
         <div id="endGame">
             <audio muted></audio>
             <div id="endContent">
-                <img id="grave" src="src/pic/grave.gif">
+                <img id="grave" src="../src/pic/grave.gif">
                 <h1 id="youDied">Game Over</h1>
                 <h2 id="nscore">High Score: <span id="total">0</span></h2>
                 <h2 id="nscore">Final Score: <span id="final">0</span></h2>
@@ -69,6 +69,6 @@
             </div>
         </div>
         </center>
-    <script src="file/snakegame.js"></script>
+    <script src="snakegame.js"></script>
     </body>
 </html>
