--- a/Snake 3019/start.html
+++ b/Snake 3019/start.html
@@ -89,8 +89,8 @@
 
 <body>
     <div class="logo">SNAKE 3019</div>
-    <a href="index.html" class="button"> START </a>
-    <a href="how2.html" class="button two"> HOW TO PLAY </a>
+    <a href="file/index.html" class="button"> START </a>
+    <a href="file/how2.html" class="button two"> HOW TO PLAY </a>
 </body>
 
 </html>
