--- a/Snake 3019/file/game3.html
+++ b/Snake 3019/file/game3.html
@@ -1,6 +1,5 @@
 <!DOCTYPE>
 <html>
-
 <head>
     <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
@@ -87,8 +86,8 @@
 
 <body>
     <div class="logo">SNAKE 3019</div>
-    <a href="file/index.html" class="button"> START </a>
-    <a href="file/how2.html" class="button two"> HOW TO PLAY </a>
+    <a href="index.html" class="button"> START </a>
+    <a href="how2.html" class="button two"> HOW TO PLAY </a>
 </body>
 
 </html>
