--- a/Snake 3019/file/how2.html
+++ b/Snake 3019/file/how2.html
@@ -43,13 +43,13 @@
 
         .left {
             margin-top: 80px;
-            margin-left: 160px;
+            margin-left: 180px;
             position: absolute;
         }
 
         .right {
             margin-top: 80px;
-            margin-left: 500px;
+            margin-left: 530px;
         }
 
         .down {
@@ -115,7 +115,7 @@
             padding: 25px;
             display: inline-block;
             margin-top: 750px;
-            margin-left: 560px;
+            margin-left: 40%;
         }
 
         .button:hover {
@@ -138,7 +138,7 @@
         <p class="txt">up</p>
         <p class="txt left">left</p>
         <p class="txt left right">right</p>
-        <div class="im"><img src="src/pic/wasd2.png" style="width: 350px;height: 320px;"></div>
+        <div class="im"><img src="../src/pic/wasd2.png" style="width: 350px;height: 320px;"></div>
         <p class="txt down">down</p>
         <p class="rule">🐍 GAME OVER</p>
         <p class="txt rule one">1. CRASH ONE'S OWN TAIL</p>
