--- a/Snake 3019/file/index.html
+++ b/Snake 3019/file/index.html
@@ -49,7 +49,7 @@
         <!-- Game Screen -->
         <div id="playGame">
             <h2>score: <span id="theScore">0</span></h2>
-            <h2>Time Left: <span id="theTime">30</span> </h2>
+            <h2 id="www">Energy : <span id="Energy">30</span> / <span id="maxEnergy">30</span></h2>
             <canvas id="myCanvas" height="625";
             width="625";>
             </canvas>
