--- a/Snake 3019/file/how2.html
+++ b/Snake 3019/file/how2.html
@@ -15,12 +15,12 @@
         }
 
         .how {
+            position: relative;
             font-family: 'Orbitron', sans-serif;
             width: 700px;
             height: 650px;
-            width: 50%;
             margin-top: 30px;
-            margin-left: 350px;
+            margin-left: 30%;
             position: absolute;
             background-color: rgb(5, 5, 5);
             color: rgb(248, 157, 207);
@@ -31,7 +31,9 @@
             box-shadow: 0px 0px 30px rgb(253, 123, 195);
             text-shadow: 0px 0px 20px rgb(253, 123, 195);
         }
-
+        .up {
+            margin-left: 40;
+        }
         .txt {
             font-family: 'Julius Sans One', sans-serif;
             color: rgb(248, 157, 207);
@@ -54,6 +56,7 @@
 
         .down {
             margin-top: -80px;
+            margin-left: 50;
         }
 
         .rule {
@@ -99,7 +102,7 @@
 
         .im {
             margin-top: -80px;
-            margin-left: -10px;
+            margin-left: 30px;
         }
 
         .button {
@@ -135,7 +138,7 @@
 
     <div class="how">
         <p>HOW TO PLAY</p>
-        <p class="txt">up</p>
+        <p class="txt up">up</p>
         <p class="txt left">left</p>
         <p class="txt left right">right</p>
         <div class="im"><img src="../src/pic/wasd2.png" style="width: 350px;height: 320px;"></div>
@@ -147,8 +150,8 @@
         <p class="rule eat">🐍 EAT FEED TO UP SIZE</p>
         <p class="rule clock">🐍 EAT THE CLOCK TO UP TIME</p>
 
-    </div>
-    <a href="file/index.html" class="button"> START </a>
+    </div><center>
+    <a href="file/index.html" class="button"> START </a></center>
 
 
 </body>
