--- a/Snake 3019/file/how2.html
+++ b/Snake 3019/file/how2.html
@@ -32,7 +32,6 @@
             text-shadow: 0px 0px 20px rgb(253, 123, 195);
         }
         .up {
-            margin-left: 40;
         }
         .txt {
             font-family: 'Julius Sans One', sans-serif;
@@ -45,18 +44,17 @@
 
         .left {
             margin-top: 80px;
-            margin-left: 180px;
+            margin-left: 20%;
             position: absolute;
         }
 
         .right {
             margin-top: 80px;
-            margin-left: 530px;
+            margin-left: 510px;
         }
 
         .down {
             margin-top: -80px;
-            margin-left: 50;
         }
 
         .rule {
@@ -102,7 +100,7 @@
 
         .im {
             margin-top: -80px;
-            margin-left: 30px;
+            margin-left: -15px;
         }
 
         .button {
