--- a/Snake 3019/file/how2.html
+++ b/Snake 3019/file/how2.html
@@ -15,13 +15,12 @@
         }
 
         .how {
-            position: relative;
             font-family: 'Orbitron', sans-serif;
             width: 700px;
             height: 650px;
-            margin-top: 30px;
-            margin-left: 30%;
-            position: absolute;
+            position:relative;
+            top: 30px;
+            margin:auto;
             background-color: rgb(5, 5, 5);
             color: rgb(248, 157, 207);
             font-size: 2em;
@@ -115,8 +114,6 @@
             box-shadow: 0px 0px 30px rgb(245, 150, 202);
             padding: 25px;
             display: inline-block;
-            margin-top: 750px;
-            margin-left: 40%;
         }
 
         .button:hover {
@@ -129,27 +126,30 @@
             cursor: url(http://ani.cursors-4u.net/cursors/cur-12/cur1136.ani), url(http://ani.cursors-4u.net/cursors/images12/cur1136.png), auto;
             touch-action: none;
         }
+        #positionbutton {
+            margin-top: 80px;
+        }
     </style>
 </head>
 
 <body>
+    <div style="width:100%;">
+        <div class="how">
+            <p>HOW TO PLAY</p>
+            <p class="txt up">up</p>
+            <p class="txt left">left</p>
+            <p class="txt left right">right</p>
+            <div class="im"><img src="../src/pic/wasd2.png" style="width: 350px;height: 320px;"></div>
+            <p class="txt down">down</p>
+            <p class="rule">🐍 GAME OVER</p>
+            <p class="txt rule one">1. CRASH ONE'S OWN TAIL</p>
+            <p class="txt rule two">2. TIME OUT</p>
+            <p class="txt rule three">3. CRASH BOMB</p>
+            <p class="rule eat">🐍 EAT FEED TO UP SIZE</p>
+            <p class="rule clock">🐍 EAT THE CLOCK TO UP TIME</p></br>
 
-    <div class="how">
-        <p>HOW TO PLAY</p>
-        <p class="txt up">up</p>
-        <p class="txt left">left</p>
-        <p class="txt left right">right</p>
-        <div class="im"><img src="../src/pic/wasd2.png" style="width: 350px;height: 320px;"></div>
-        <p class="txt down">down</p>
-        <p class="rule">🐍 GAME OVER</p>
-        <p class="txt rule one">1. CRASH ONE'S OWN TAIL</p>
-        <p class="txt rule two">2. TIME OUT</p>
-        <p class="txt rule three">3. CRASH BOMB</p>
-        <p class="rule eat">🐍 EAT FEED TO UP SIZE</p>
-        <p class="rule clock">🐍 EAT THE CLOCK TO UP TIME</p>
-
-    </div><center>
-    <a href="file/index.html" class="button"> START </a></center>
+    </div></div><center>
+    <a href="file/index.html" class="button" id="positionbutton"> START </a></center>
 
 
 </body>
