edit some rule in how2.html

--- a/Snake 3019/file/how2.html
+++ b/Snake 3019/file/how2.html
@@ -17,7 +17,7 @@
         .how {
             font-family: 'Orbitron', sans-serif;
             width: 700px;
-            height: 650px;
+            height: 680px;
             position:relative;
             top: 30px;
             margin:auto;
@@ -62,39 +62,39 @@
             text-shadow: 0px 0px 20px rgb(253, 123, 195);
             font-size: 20px;
             margin-top: 10px;
-            margin-left: 40px;
+            margin-left: 30px;
             position: absolute;
         }
 
         .one {
             margin-top: 50px;
-            margin-left: 73px;
+            margin-left: 63px;
             color: rgb(167, 242, 255);
             text-shadow: 0px 0px 20px rgb(112, 208, 224);
         }
 
         .two {
             margin-top: 80px;
-            margin-left: 70px;
+            margin-left: 60px;
             color: rgb(167, 242, 255);
             text-shadow: 0px 0px 20px rgb(112, 208, 224);
         }
 
         .three {
             margin-top: 110px;
-            margin-left: 70px;
+            margin-left: 60px;
             color: rgb(167, 242, 255);
             text-shadow: 0px 0px 20px rgb(112, 208, 224);
         }
 
         .eat {
             margin-top: 160px;
-            margin-left: 40px;
+            margin-left: 30px;
         }
 
         .clock {
             margin-top: 220px;
-            margin-left: 40px;
+            margin-left: 30px;
         }
 
         .im {
@@ -129,6 +129,10 @@
         #positionbutton {
             margin-top: 80px;
         }
+        .next{
+            margin-top: 250;
+            margin-left: 60px;
+        }
     </style>
 </head>
 
@@ -143,10 +147,11 @@
             <p class="txt down">down</p>
             <p class="rule">🐍 GAME OVER</p>
             <p class="txt rule one">1. CRASH ONE'S OWN TAIL</p>
-            <p class="txt rule two">2. TIME OUT</p>
+            <p class="txt rule two">2. OUT OF ENERGY</p>
             <p class="txt rule three">3. CRASH BOMB</p>
-            <p class="rule eat">🐍 EAT FEED TO UP SIZE</p>
-            <p class="rule clock">🐍 EAT THE CLOCK TO UP TIME</p></br>
+            <p class="rule eat">🐍 EAT THE FOOD TO INCRASE THE MAXIMUM ENERGY AND SIZE</p>
+            <p class="rule clock">🐍 SNAKE USE ENERGY TO ALIVE AND MOVEABLE </p>
+            <p class="rule next">(TO CONTINOUS A GAME)</p></br>
 
     </div></div><center>
     <a href="file/index.html" class="button" id="positionbutton"> START </a></center>
