--- a/Snake 3019/file/how2.html
+++ b/Snake 3019/file/how2.html
@@ -154,7 +154,7 @@
             <p class="rule eat">🐍 EAT THE FOOD TO INCRASE THE MAXIMUM ENERGY AND SIZE</p>
 
     </div></div><center>
-    <a href="file/index.html" class="button" id="positionbutton"> START </a></center>
+    <a href="index.html" class="button" id="positionbutton"> START </a></center>
 
 
 </body>
