complete the button for start menu

--- a/Snake 3019/start.html
+++ b/Snake 3019/start.html
@@ -46,7 +46,7 @@
         .button {
             width: 20%;
             font-family: 'Orbitron', sans-serif;
-            font-size: 2em;
+            font-size:2vw;
             text-align: center;
             text-decoration: none;
             border: 7px solid rgb(253, 123, 195);
@@ -56,7 +56,6 @@
             padding: 25px;
             display: inline-block;
             margin-top: 40px;
-            margin-left: 320px;
         }
 
         .button:hover {
@@ -72,7 +71,7 @@
         .two {
             width: 20%;
             font-family: 'Orbitron', sans-serif;
-            font-size: 2em;
+            font-size:2vw;
             text-align: center;
             text-decoration: none;
             border: 7px solid rgb(253, 123, 195);
@@ -82,15 +81,18 @@
             padding: 25px;
             display: inline-block;
             margin-top: 480px;
-            margin-left: 100px;
+            position: relative;
+            margin-left: 50px;
         }
     </style>
 </head>
 
 <body>
-    <div class="logo">SNAKE 3019</div>
-    <a href="file/index.html" class="button"> START </a>
-    <a href="file/how2.html" class="button two"> HOW TO PLAY </a>
+    <div style="width:100%;">
+        <div class="logo">SNAKE 3019</div><center>
+        <a href="file/index.html"  class="button"> START </a>
+        <a href="file/how2.html" class="button two"> HOW TO PLAY </a></center>
+    </div>
 </body>
 
 </html>
