--- a/Snake 3019/start.html
+++ b/Snake 3019/start.html
@@ -10,6 +10,7 @@
     <style>
         html {
             background-image: url("https://media.giphy.com/media/4ZMAeVfSM59za/giphy.gif");
+            height: 100%; 
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
