--- a/Snake 3019/file/index.html
+++ b/Snake 3019/file/index.html
@@ -47,14 +47,15 @@
             <h1 id="pressStart"><img id="keyW" src="../src/pic/str.png"></h1>
         </div>
         <!-- Game Screen -->
-        <div id="playGame">
-            <h2>score: <span id="theScore">3</span></h2>
-            <h2 id="www">Energy : <span id="Energy">30</span> / <span id="maxEnergy">30</span></h2>
-            <canvas id="myCanvas" height="625";
-            width="625";>
-            </canvas>
-            <img id="myBomb" src="../src/pic/bomb.gif">
-        </div>
+        <div style="width:100%">
+            <div id="playGame">
+                <h2>score: <span id="theScore">3</span></h2>
+                <h2 id="www">Energy : <span id="Energy">30</span> / <span id="maxEnergy">30</span></h2>
+                <canvas id="myCanvas" height="625";
+                width="625";>
+                </canvas>
+                <img id="myBomb" src="../src/pic/bomb.gif">
+        </div></div>
 
         <!-- End Screen -->
         <center>
