--- a/Snake 3019/file/how2.html
+++ b/Snake 3019/file/how2.html
@@ -150,8 +150,8 @@
             <p class="txt rule two">2. OUT OF ENERGY</p>
             <p class="txt rule three">3. CRASH BOMB</p>
             <p class="rule clock">🐍 SNAKE USE ENERGY TO ALIVE AND MOVEABLE </p>
-            <p class="rule next">(TO CONTINOUS A GAME)</p></br>
-            <p class="rule eat">🐍 EAT THE FOOD TO INCRASE THE MAXIMUM ENERGY AND SIZE</p>
+            <p class="rule next">(TO CONTINUOUS A GAME)</p></br>
+            <p class="rule eat">🐍 EAT THE FOOD TO INCREASE THE MAXIMUM ENERGY AND SIZE</p>
 
     </div></div><center>
     <a href="index.html" class="button" id="positionbutton"> START </a></center>
