--- a/Snake 3019/file/index.html
+++ b/Snake 3019/file/index.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 
         <!-- This is for Audio -->
         <audio id="bite" preload="auto">
