--- a/Snake 3019/start.html
+++ b/Snake 3019/start.html
@@ -10,7 +10,7 @@
     <style>
         html {
             background-image: url("https://media.giphy.com/media/4ZMAeVfSM59za/giphy.gif");
-            height: 100%; 
+            height: 100%;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -89,6 +89,9 @@
 </head>
 
 <body>
+    <audio id="bell" preload="auto">
+        <source src="src/sound/bell.mp3" type="audio/ogg">
+    </audio>
     <div style="width:100%;">
         <div class="logo">SNAKE 3019</div><center>
         <a href="file/index.html"  class="button"> START </a>
