--- a/Snake 3019/file/index.html
+++ b/Snake 3019/file/index.html
@@ -44,6 +44,9 @@
         <audio id="beep1">
             <source src="../src/sound/beep3.mp3" type="audio/ogg">
         </audio>
+        <audio id="flat">
+                <source src="../src/sound/flat2.mp3" type="audio/ogg">
+            </audio>
         <!-- <iframe src="src/sound/bgm3.mp3" allow="autoplay" id="stopbgm" style="display:none"></iframe> -->
         <audio volume="0.1" id="bgm" autoplay loop>
             <source src="../src/sound/bgm3.mp3" type="audio/ogg">
