--- a/Snake 3019/file/index.html
+++ b/Snake 3019/file/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <link rel="stylesheet" type="text/css" href="../file/style.css">
-        <link rel="icon" href="src/pic/icon.png">
+        <link rel="icon" href="../src/pic/icon.png">
         <!-- This is for font -->
         <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
@@ -75,10 +75,9 @@
         <div id="endGame">
             <audio muted></audio>
             <div id="endContent">
-                <img id="grave" src="../src/pic/grave.gif">
                 <h1 id="youDied">Game Over</h1>
-                <h2 id="nscore">High Score: <span id="total">0</span></h2>
-                <h2 id="nscore">Final Score: <span id="final">0</span></h2>
+                <h2 id="nscoreone">High Score: <span id="total">0</span></h2>
+                <h2 id="nscoretwo">Final Score: <span id="final">0</span></h2>
                 <button class="myButton" onclick="start()">Replay!</button>
             </div>
         </div>
