--- a/Snake 3019/file/index.html
+++ b/Snake 3019/file/index.html
@@ -69,6 +69,15 @@
                 width="625";>
                 </canvas>
         </div>
+        <!-- Item Box -->
+        <div id="itembox">
+            <img src="../src/pic/bmbg.png" style="width:30px;height30px;">
+            <img src="../src/pic/bmbr.png" style="width:30px;height30px;">
+
+            <img src="../src/pic/energyball.png" style="width:30px;height30px;">
+
+            <img src="../src/pic/shield.png" style="width:30px;height30px;">
+        </div>
 
         <!-- End Screen -->
         <center>
