--- a/Snake 3019/file/how2.html
+++ b/Snake 3019/file/how2.html
@@ -17,7 +17,7 @@
 
         .how {
             font-family: 'Orbitron', sans-serif;
-            width: 700px;
+            width: 750px;
             height: 730px;
             position:relative;
             top: 30px;
@@ -30,8 +30,6 @@
             border-radius: 50px;
             box-shadow: 0px 0px 30px rgb(253, 123, 195);
             text-shadow: 0px 0px 20px rgb(253, 123, 195);
-        }
-        .up {
         }
         .txt {
             font-family: 'Julius Sans One', sans-serif;
@@ -157,7 +155,7 @@
             <p class="txt rule three">3. CRASH BOMB</p>
             <p class="rule clock">🐍 SNAKE USE ENERGY TO ALIVE AND MOVEABLE </p>
             <p class="rule next">(TO CONTINUOUS A GAME)</p></br>
-            <p class="rule eat">🐍 EAT THE FOOD TO INCREASE THE MAXIMUM ENERGY AND SIZE</p>
+            <p class="rule eat">🐍 EAT THE MACHINE TO INCREASE THE MAXIMUM ENERGY AND SIZE</p>
             <p class="rule shield">🐍 EAT THE SHIELD TO PROTECT YOU FROM GAME OVER ONCE</p>
 
     </div></div><center>
