--- a/Snake 3019/file/index.html
+++ b/Snake 3019/file/index.html
@@ -71,12 +71,15 @@
         </div>
         <!-- Item Box -->
         <div id="itembox">
-            <img src="../src/pic/bmbg.png" style="width:30px;height30px;">
-            <img src="../src/pic/bmbr.png" style="width:30px;height30px;">
-
-            <img src="../src/pic/energyball.png" style="width:30px;height30px;">
-
-            <img src="../src/pic/shield.png" style="width:30px;height30px;">
+            <!-- <img src="../src/pic/bmbr.png" style="width:40px;height:40px;"  class="item"> -->
+            <img src="../src/pic/energyball.png" style="width:40px;height:40px;" class="item">
+            <p class="txtitem" id="energy">ENERGY</p></br>
+            <img src="../src/pic/shield.png" style="width:40px;height:40px;" class="item">
+            <p class="txtitem">SHIELD</p></br>
+            <img src="../src/pic/bmbg.png" style="width:40px;height:40px" class="item">
+            <p class="txtitem">BOMB</p></br>
+            <img src="../src/pic/food.png" style="width:40px;height:40px;" class="item">
+            <p class="txtitem">MACHINE</p></br>
         </div>
 
         <!-- End Screen -->
